crates/tt-cli/src/commands/snapshots/tt_cli__commands__report__tests__report_empty_period.snap
---
source: crates/tt-cli/src/commands/report.rs
expression: output
---
TIME REPORT: Week of Jan 27, 2025

No events recorded this week.

Hint: Run 'tt status' to check tracking health.

AGENT SESSIONS
──────────────
No agent sessions recorded.
