crates/tt-cli/src/commands/snapshots/tt_cli__commands__report__tests__report_json_agent_session_counts_match_total.snap
---
source: crates/tt-cli/src/commands/report.rs
expression: output
---
{
  "generated_at": "2025-01-29T16:00:00+00:00",
  "timezone": "Etc/UTC",
  "week_start_day": "monday",
  "period": {
    "start": "2025-01-27",
    "end": "2025-02-02",
    "type": "week"
  },
  "by_tag": [],
  "streams": [
    {
      "id": "abc123def456",
      "name": "tmux/dev/session-1",
      "time_direct_ms": 7200000,
      "time_delegated_ms": 4500000,
      "tags": []
    }
  ],
  "untagged": {
    "time_direct_ms": 7200000,
    "time_delegated_ms": 4500000,
    "streams": [
      "abc123def456"
    ]
  },
  "agent_sessions": {
    "total": 3,
    "by_source": {
      "claude": 2,
      "opencode": 1
    },
    "by_type": {
      "subagent": 2,
      "user": 1
    },
    "top_sessions": [
      {
        "session_id": "session-1",
        "source": "claude",
        "type": "user",
        "duration_ms": 1800000,
        "starting_prompt": "One"
      },
      {
        "session_id": "session-2",
        "source": "opencode",
        "type": "subagent",
        "duration_ms": 1200000,
        "starting_prompt": "Two"
      },
      {
        "session_id": "session-3",
        "source": "claude",
        "type": "subagent",
        "duration_ms": 600000,
        "starting_prompt": "Three"
      }
    ]
  },
  "totals": {
    "time_direct_ms": 7200000,
    "time_delegated_ms": 4500000,
    "stream_count": 1,
    "unassigned_direct_ms": 0,
    "unassigned_delegated_ms": 0
  }
}
