crates/tt-cli/src/commands/snapshots/tt_cli__commands__report__tests__report_json_tagged_and_untagged.snap
---
source: crates/tt-cli/src/commands/report.rs
expression: output
---
{
  "generated_at": "2025-01-29T16:00:00+00:00",
  "timezone": "Etc/UTC",
  "week_start_day": "monday",
  "period": {
    "start": "2025-01-27",
    "end": "2025-02-02",
    "type": "week"
  },
  "by_tag": [
    {
      "tag": "dev",
      "time_direct_ms": 1200000,
      "time_delegated_ms": 0,
      "streams": [
        "abc123def456"
      ]
    }
  ],
  "streams": [
    {
      "id": "abc123def456",
      "name": "tmux/dev/session-1",
      "time_direct_ms": 1200000,
      "time_delegated_ms": 0,
      "tags": [
        "dev"
      ]
    },
    {
      "id": "def456ghi789",
      "name": "tmux/dev/session-2",
      "time_direct_ms": 600000,
      "time_delegated_ms": 300000,
      "tags": []
    }
  ],
  "untagged": {
    "time_direct_ms": 600000,
    "time_delegated_ms": 300000,
    "streams": [
      "def456ghi789"
    ]
  },
  "agent_sessions": {
    "total": 0,
    "by_source": {},
    "by_type": {},
    "top_sessions": []
  },
  "totals": {
    "time_direct_ms": 1800000,
    "time_delegated_ms": 300000,
    "stream_count": 2,
    "unassigned_direct_ms": 0,
    "unassigned_delegated_ms": 0
  }
}
